--- a/index.html
+++ b/index.html
@@ -4,46 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Kai Sanchez | Thinkful Software Enigneering Student</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" type="text/css" /> 
     <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+    <!-- Logo/Header -->
     <header>
         <div>
-            <h1 class="dark-background name">Portfolio</h1>
+            <h1 class="dark-background name">Portfolio for Kai Sanchez</h1>
         </div>
     </header>
     <main class="light-background">
         <div>
             <article>
+                <!-- Introduction -->
                 <h2 class="hello">Hello! I am Raquel 'Kai' Sanchez</h2>
                 <section class="intro">
-                    <p>My name is Raquel, but I go by Kai and I am a software engineer currently residing in Tampa, Florida.</p>
+                    <p class="circle">My name is Raquel, but I go by Kai and I am a software engineer currently residing in Tampa, Florida.</p>
                     <p></p>
                 </section>
                 <hr>
+                <!-- About me -->
                 <section class="about">
-                    <h3>About Me</h3>
+                    <h3><u>About Me</u></h3>
                     <p>Coding has always been a strong interest of mine ever since I took my first ever Web Design class in high school and loved every minute of it.</p>
                     <p>As a current student of Thinkful, I am excited to start my life long career of being a software enigneer. I'm looking forward to participating in Hackathons and learning as much as I can!</p>
-                    <p>When I am not honing in on my software developing skills, I very much enjoy playing guitar and relaxing with my four cats.</p>
+                    <p>During the time I am not honing my skills in coding, I am usually doing one of these:
+                        <ul>
+                            <li>Playing guitar</li>
+                            <li>Learning a new cooking recipe</li>
+                            <li>Hanging out with my cats</li>
+                        </ul>
+                    </p>
                 </section>
                 <hr>
+                <!-- Contact links -->
                 <section class="contact">
-                    <h3>Contact Me</h3>
+                    <h3><u>Contact Me</u></h3>
                     <div class="box box-contact">
-                        <ul>
-                            <li><a href="https://www.linkedin.com/in/raquel-s-a05479259/">LinkedIn</a></li>
-                            <li><a href="https://github.com/KaiS96" target="_blank">GitHub</a></li>
-                        </ul>
+                        <ol class="link-names">
+                            <li><a href="https://www.linkedin.com/in/raquel-kai-sanchez-a61aa6259/" target="_blank"><img src="images/linkedin-logo.png">LinkedIn</a></li>
+                            <li><a href="https://github.com/KaiS96" target="_blank"><img src="/images/github-logo.png">GitHub</a></li>
+                        </ol>
                     </div>
                 </section>
             </article>
         </div>
     </main>
+    <!-- Footer -->
     <footer class="dark-background">
-        <p>Raquel 'Kai' Sanchez</p>
+        <p>&#169; Kai Sanchez</p>
     </footer>
     <script src="script.js">
     </script>
