--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <div class="box box-contact">
                         <ol class="link-names">
                             <li><a href="https://www.linkedin.com/in/raquel-kai-sanchez-a61aa6259/" target="_blank"><img src="images/linkedin-logo.png">LinkedIn</a></li>
-                            <li><a href="https://github.com/KaiS96" target="_blank"><img src="/images/github-logo.png">GitHub</a></li>
+                            <li><a href="https://github.com/KaiS96" target="_blank"><img src="images/github-logo.png">GitHub</a></li>
                         </ol>
                     </div>
                 </section>
