--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
                 <h2 class="hello">Hello! I am Raquel 'Kai' Sanchez</h2>
                 <section class="intro">
                     <p class="circle">My name is Raquel, but I go by Kai and I am a software engineer currently residing in Tampa, Florida.</p>
-                    <p></p>
                 </section>
                 <hr>
                 <!-- About me -->
@@ -44,8 +43,8 @@
                     <h3><u>Contact Me</u></h3>
                     <div class="box box-contact">
                         <ol class="link-names">
-                            <li><a href="https://www.linkedin.com/in/raquel-kai-sanchez-a61aa6259/" target="_blank"><img src="images/linkedin-logo.png">LinkedIn</a></li>
-                            <li><a href="https://github.com/KaiS96" target="_blank"><img src="images/github-logo.png">GitHub</a></li>
+                            <li><a href="https://www.linkedin.com/in/raquel-kai-sanchez-a61aa6259/" target="_blank"><img src="images/linkedin-logo.png" alt="LinkedIn Logo">LinkedIn</a></li>
+                            <li><a href="https://github.com/KaiS96" target="_blank"><img src="images/github-logo.png" alt="GitHub Logo">GitHub</a></li>
                         </ol>
                     </div>
                 </section>
