Removes extra </p> and updates <section> container to div

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
             <article>
                 <!-- Introduction -->
                 <h2 class="hello">Hello! I am Raquel 'Kai' Sanchez</h2>
-                <section class="intro">
+                <div class="intro">
                     <p class="circle">My name is Raquel, but I go by Kai and I am a software engineer currently residing in Tampa, Florida.</p>
-                </section>
+                </div>
                 <hr>
                 <!-- About me -->
-                <section class="about">
+                <div class="about">
                     <h3><u>About Me</u></h3>
                     <p>Coding has always been a strong interest of mine ever since I took my first ever Web Design class in high school and loved every minute of it.</p>
                     <p>As a current student of Thinkful, I am excited to start my life long career of being a software enigneer. I'm looking forward to participating in Hackathons and learning as much as I can!</p>
@@ -35,11 +35,10 @@
                             <li>Learning a new cooking recipe</li>
                             <li>Hanging out with my cats</li>
                         </ul>
-                    </p>
-                </section>
+                    </div>
                 <hr>
                 <!-- Contact links -->
-                <section class="contact">
+                <div class="contact">
                     <h3><u>Contact Me</u></h3>
                     <div class="box box-contact">
                         <ol class="link-names">
@@ -47,7 +46,7 @@
                             <li><a href="https://github.com/KaiS96" target="_blank"><img src="images/github-logo.png" alt="GitHub Logo">GitHub</a></li>
                         </ol>
                     </div>
-                </section>
+                </div>
             </article>
         </div>
     </main>
